--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/attached_assets/AASLOGO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AAS Eduguide - Expert guidance for medical admissions NEET UG/PG, DNB, INI-CET" />
     <meta name="keywords" content="NEET, medical admission, counselling, education, India" />
