--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/attached_assets/AASLOGO.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="16x16" />
+    <link rel="apple-touch-icon" href="/favicon.png" sizes="180x180" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="AAS Eduguide - Expert guidance for medical admissions NEET UG/PG, DNB, INI-CET" />
     <meta name="keywords" content="NEET, medical admission, counselling, education, India" />
